force-app/main/default/objects/Translation__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Where to use?</description>
    <inlineHelpText>Where to use?</inlineHelpText>
    <label>Context</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>