force-app/main/default/objects/Translation__c/fields/en_US__c.field-meta.xml
<CustomField>
    <fullName>en_US__c</fullName>
    <description>in English</description>
    <inlineHelpText>in English</inlineHelpText>
    <label>en_US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>