force-app/main/default/objects/Translation__c/fields/ja__c.field-meta.xml
<CustomField>
    <fullName>ja__c</fullName>
    <description>in Japanese</description>
    <inlineHelpText>in Japanese</inlineHelpText>
    <label>ja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>