force-app/main/default/objects/Translation__c/fields/kh__c.field-meta.xml
<CustomField>
    <fullName>kh__c</fullName>
    <label>kh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>