force-app/main/default/objects/Translation__c/fields/ko__c.field-meta.xml
<CustomField>
    <fullName>ko__c</fullName>
    <description>in Korean</description>
    <inlineHelpText>in Korean</inlineHelpText>
    <label>ko</label>
    <length>255</length>
    <type>Text</type>
</CustomField>