force-app/main/default/objects/Translation__c/fields/vi__c.field-meta.xml
<CustomField>
    <fullName>vi__c</fullName>
    <description>in Vietnamese</description>
    <inlineHelpText>in Vietnamese</inlineHelpText>
    <label>vi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>