force-app/main/default/objects/Translation__c/fields/zh_CN__c.field-meta.xml
<CustomField>
    <fullName>zh_CN__c</fullName>
    <description>in Chinese(Simplified)</description>
    <inlineHelpText>in Chinese(Simplified)</inlineHelpText>
    <label>zh_CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>